# LearnCMake

./: .gitignore  README.md
Step1_BaseStartPoint/: CMakeLists.txt
Step1_BaseStartPoint/inc/: BaseStartPoint.h.in
Step1_BaseStartPoint/src/: main.c
Step2_AddALibrary/: CMakeLists.txt
Step2_AddALibrary/inc/: AddALibrary.h.in
Step2_AddALibrary/main/: CMakeLists.txt
Step2_AddALibrary/main/src/: main.c
Step2_AddALibrary/math/: CMakeLists.txt
Step3_AddUsageRequirementsForALibrary/: CMakeLists.txt
Step3_AddUsageRequirementsForALibrary/main/: CMakeLists.txt
Step3_AddUsageRequirementsForALibrary/main/src/: main.c
Step3_AddUsageRequirementsForALibrary/math/: CMakeLists.txt
Step3_AddUsageRequirementsForALibrary/math/src/: my_math.c
Step4_AddGeneratorExpressions/: CMakeLists.txt
Step4_AddGeneratorExpressions/main/: CMakeLists.txt
Step4_AddGeneratorExpressions/main/src/: main.c
Step4_AddGeneratorExpressions/math/: CMakeLists.txt
Step4_AddGeneratorExpressions/math/includes/: my_math.h
Step7_AddingSystemIntrospection/: CMakeLists.txt
Step7_AddingSystemIntrospection/main/: CMakeLists.txt
Step7_AddingSystemIntrospection/main/src/: main.c
Step7_AddingSystemIntrospection/math/: CMakeLists.txt
Step7_AddingSystemIntrospection/math/includes/: my_math.h
Step7_AddingSystemIntrospection/math/src/: my_math.c
Step8_AddingACustomCommandAndGeneratedFile/: CMakeLists.txt
Step8_AddingACustomCommandAndGeneratedFile/main/: CMakeLists.txt
Step8_AddingACustomCommandAndGeneratedFile/main/src/: main.cpp
Step8_AddingACustomCommandAndGeneratedFile/math/: CMakeLists.txt
Step8_AddingACustomCommandAndGeneratedFile/math/includes/: my_math.h
Step8_AddingACustomCommandAndGeneratedFile/math/src/: my_math.cpp
